--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,15 +87,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Update Homebrew Tap
-        uses: mislav/bump-homebrew-formula-action@v3
+        uses: ./.github/actions/update-homebrew-tap
         with:
           formula-name: velo
           homebrew-tap: dimaosipa/brew
           formula-path: Formula/velo.rb
           download-url: https://github.com/dimaosipa/velocity/releases/download/${{ steps.get_version.outputs.VERSION }}/velo-${{ steps.get_version.outputs.VERSION }}-arm64.tar.gz
+          version: ${{ steps.get_version.outputs.VERSION }}
+          sha256-file: release/velo-${{ steps.get_version.outputs.VERSION }}-arm64.tar.gz.sha256
           commit-message: |
             velo ${{ steps.get_version.outputs.VERSION }}
             
             Automated update from dimaosipa/velocity release
-        env:
-          COMMITTER_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
