--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,13 +61,19 @@ jobs:
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "Built version: $VERSION"
       
+    - name: Prepare Artifacts
+      run: |
+        # Create a clean artifacts directory with proper structure
+        mkdir -p artifacts/debug artifacts/release
+        cp .build/debug/velo artifacts/debug/velo
+        cp .build/release/velo artifacts/release/velo
+        chmod +x artifacts/debug/velo artifacts/release/velo
+    
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: velo-binaries
-        path: |
-          .build/debug/velo
-          .build/release/velo
+        path: artifacts/
         retention-days: 1
 
   test:
@@ -98,16 +104,32 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: velo-binaries
-        path: .build/
+        path: artifacts/
       
     - name: Setup Downloaded Binaries
       run: |
+        # Debug: Show what's in the artifacts directory
+        echo "=== Contents of artifacts directory ==="
+        find artifacts -type f -name "velo" 2>/dev/null || echo "No velo binaries found"
+        ls -la artifacts/ || echo "artifacts directory does not exist"
+        ls -la artifacts/debug/ 2>/dev/null || echo "artifacts/debug directory does not exist"
+        ls -la artifacts/release/ 2>/dev/null || echo "artifacts/release directory does not exist"
+        
+        # Create .build directory structure and copy binaries
+        mkdir -p .build/debug .build/release
+        cp artifacts/debug/velo .build/debug/velo
+        cp artifacts/release/velo .build/release/velo
+        
         # Restore executable permissions
         chmod +x .build/debug/velo .build/release/velo
         
         # Verify binaries work
         .build/debug/velo --version
         .build/release/velo --version
+        echo "=== Testing debug binary ==="
+        .build/debug/velo --version 2>/dev/null || echo "Debug binary failed"
+        echo "=== Testing release binary ==="
+        .build/release/velo --version 2>/dev/null || echo "Release binary failed"
 
     - name: Generate Version for Tests
       run: |
@@ -142,10 +164,14 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: velo-binaries
-        path: .build/
+        path: artifacts/
     
     - name: Setup Downloaded Binaries
       run: |
+        # Create .build directory structure and copy binaries
+        mkdir -p .build/debug .build/release
+        cp artifacts/debug/velo .build/debug/velo
+        cp artifacts/release/velo .build/release/velo
         chmod +x .build/debug/velo .build/release/velo
     
     - name: Get version and tag info
