--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
         
       - id: swiftlint
         name: SwiftLint
-        entry: swiftlint --fix --quiet
+        entry: velo exec swiftlint --fix --quiet
         language: system
         files: \.swift$
         stages: [pre-commit]
