--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,7 @@ jobs:
         echo "✅ Unit tests passed"
 
   release:
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     name: Create Release
     needs: [build, test]
     if: startsWith(github.ref, 'refs/tags/v')
@@ -159,11 +159,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    
-    - name: Setup Swift
-      uses: swift-actions/setup-swift@v1
-      with:
-        swift-version: "5.9"
     
     - name: Download Build Artifacts
       uses: actions/download-artifact@v4
@@ -271,7 +266,7 @@ jobs:
   # Cleanup job to remove tag if tests or build fail
   cleanup:
     if: failure() && startsWith(github.ref, 'refs/tags/v')
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     needs: [build, test, release]
     permissions:
       contents: write
